# rejection-sama

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  rejections.csv
rejection_sama/: .__init__.py.swp  __init__.py
